--- a/app/src/main/res/layout/fragment_classic_game_session.xml
+++ b/app/src/main/res/layout/fragment_classic_game_session.xml
@@ -10,7 +10,8 @@
     <com.livmas.tictactab.ui.views.SquareFrameLayout
         android:id="@+id/flFieldContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="15"
         android:padding="2.5dp">
 
         <include
@@ -25,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_weight="0"
         android:text="@string/restart"
         app:layout_constraintTop_toBottomOf="@+id/flFieldContainer" />
 
@@ -32,14 +34,16 @@
         android:id="@+id/tvGameDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
+        android:layout_weight="0"
 
-        android:text="@string/current_player_message"/>
+        android:text="@string/current_player_message"
+        android:textAlignment="center" />
 
     <ImageView
         android:id="@+id/ivGameDisplay"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/ic_x_cell"
-        android:contentDescription="@string/iv_display_desc" />
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        android:contentDescription="@string/iv_display_desc"
+        android:src="@drawable/ic_x_cell" />
 </LinearLayout>
