--- a/app/src/main/res/layout/fragment_complex_game_session.xml
+++ b/app/src/main/res/layout/fragment_complex_game_session.xml
@@ -9,13 +9,16 @@
     <com.livmas.tictactab.ui.views.SquareFrameLayout
         android:id="@+id/flFieldContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_weight="15"
+        android:foregroundGravity="center"
         android:padding="2.5dp">
 
         <TableLayout
             android:id="@+id/field"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:divider="@drawable/block_divider_material"
             android:showDividers="middle"
             tools:context=".ui.fragments.game.sessions.complex.ComplexGameSessionFragment">
@@ -23,12 +26,11 @@
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:divider="@drawable/block_divider_material"
                 android:showDividers="middle">
 
-                <com.livmas.tictactab.ui.views.SquareFrameLayout
-                    android:layout_width="130dp"
-                    android:layout_height="130dp">
+                <com.livmas.tictactab.ui.views.SquareFrameLayout android:layout_weight="1">
 
                     <include
                         android:id="@+id/block00"
@@ -37,12 +39,10 @@
                     <ImageView
                         android:id="@+id/image00"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent" />
                 </com.livmas.tictactab.ui.views.SquareFrameLayout>
 
-                <com.livmas.tictactab.ui.views.SquareFrameLayout
-                    android:layout_width="130dp"
-                    android:layout_height="130dp">
+                <com.livmas.tictactab.ui.views.SquareFrameLayout android:layout_weight="1">
 
                     <include
                         android:id="@+id/block01"
@@ -51,12 +51,10 @@
                     <ImageView
                         android:id="@+id/image01"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent" />
                 </com.livmas.tictactab.ui.views.SquareFrameLayout>
 
-                <com.livmas.tictactab.ui.views.SquareFrameLayout
-                    android:layout_width="130dp"
-                    android:layout_height="130dp">
+                <com.livmas.tictactab.ui.views.SquareFrameLayout android:layout_weight="1">
 
                     <include
                         android:id="@+id/block02"
@@ -65,19 +63,18 @@
                     <ImageView
                         android:id="@+id/image02"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent" />
                 </com.livmas.tictactab.ui.views.SquareFrameLayout>
             </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:divider="@drawable/block_divider_material"
                 android:showDividers="middle">
 
-                <com.livmas.tictactab.ui.views.SquareFrameLayout
-                    android:layout_width="130dp"
-                    android:layout_height="130dp">
+                <com.livmas.tictactab.ui.views.SquareFrameLayout android:layout_weight="1">
 
                     <include
                         android:id="@+id/block10"
@@ -86,12 +83,10 @@
                     <ImageView
                         android:id="@+id/image10"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent" />
                 </com.livmas.tictactab.ui.views.SquareFrameLayout>
 
-                <com.livmas.tictactab.ui.views.SquareFrameLayout
-                    android:layout_width="130dp"
-                    android:layout_height="130dp">
+                <com.livmas.tictactab.ui.views.SquareFrameLayout android:layout_weight="1">
 
                     <include
                         android:id="@+id/block11"
@@ -100,12 +95,10 @@
                     <ImageView
                         android:id="@+id/image11"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent" />
                 </com.livmas.tictactab.ui.views.SquareFrameLayout>
 
-                <com.livmas.tictactab.ui.views.SquareFrameLayout
-                    android:layout_width="130dp"
-                    android:layout_height="130dp">
+                <com.livmas.tictactab.ui.views.SquareFrameLayout android:layout_weight="1">
 
                     <include
                         android:id="@+id/block12"
@@ -114,19 +107,16 @@
                     <ImageView
                         android:id="@+id/image12"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent" />
                 </com.livmas.tictactab.ui.views.SquareFrameLayout>
             </TableRow>
 
             <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:divider="@drawable/block_divider_material"
                 android:showDividers="middle">
 
-                <com.livmas.tictactab.ui.views.SquareFrameLayout
-                    android:layout_width="130dp"
-                    android:layout_height="130dp">
+                <com.livmas.tictactab.ui.views.SquareFrameLayout android:layout_weight="1">
 
                     <include
                         android:id="@+id/block20"
@@ -135,12 +125,10 @@
                     <ImageView
                         android:id="@+id/image20"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent" />
                 </com.livmas.tictactab.ui.views.SquareFrameLayout>
 
-                <com.livmas.tictactab.ui.views.SquareFrameLayout
-                    android:layout_width="130dp"
-                    android:layout_height="130dp">
+                <com.livmas.tictactab.ui.views.SquareFrameLayout android:layout_weight="1">
 
                     <include
                         android:id="@+id/block21"
@@ -149,12 +137,10 @@
                     <ImageView
                         android:id="@+id/image21"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent" />
                 </com.livmas.tictactab.ui.views.SquareFrameLayout>
 
-                <com.livmas.tictactab.ui.views.SquareFrameLayout
-                    android:layout_width="130dp"
-                    android:layout_height="130dp">
+                <com.livmas.tictactab.ui.views.SquareFrameLayout android:layout_weight="1">
 
                     <include
                         android:id="@+id/block22"
@@ -163,7 +149,7 @@
                     <ImageView
                         android:id="@+id/image22"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent" />
                 </com.livmas.tictactab.ui.views.SquareFrameLayout>
             </TableRow>
         </TableLayout>
@@ -172,26 +158,27 @@
 
 
     <Button
-    android:id="@+id/bRestart"
-    style="@style/Theme.Button"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="16dp"
-    android:text="@string/restart"/>
+        android:id="@+id/bRestart"
+        style="@style/Theme.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/restart" />
 
     <TextView
-    android:id="@+id/tvGameDisplay"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textAlignment="center"
+        android:id="@+id/tvGameDisplay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
-    android:text="@string/current_player_message"/>
+        android:text="@string/current_player_message"
+        android:textAlignment="center" />
 
     <ImageView
-    android:id="@+id/ivGameDisplay"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
-    android:src="@drawable/ic_x_cell"
-    android:contentDescription="@string/iv_display_desc" />
+        android:id="@+id/ivGameDisplay"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        android:contentDescription="@string/iv_display_desc"
+        android:src="@drawable/ic_x_cell" />
 
 </LinearLayout>
