--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,8 +15,7 @@
         <item name="android:windowBackground">@color/white</item>
     </style>
 
-    <style name="Theme.TicTacTab.Base" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-<!--        <item name="android:actionBarSize">0dp</item>-->
+    <style name="Theme.TicTacTab.Base" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
 <!--        <item name="actionBarSize">0dp</item>-->
 
         <item name="android:textViewStyle">
